# backend

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: manage.py  pytest.ini
src/config/: settings.py  settings_test.py  urls.py
src/delivery/: admin.py  models.py  nova_post_api_client.py  serializers.py  views.py
src/delivery/migrations/: 0001_initial.py  0002_order_delivery_method_order_email_order_first_name_and_more.py  0003_alter_order_city_alter_order_delivery_method_and_more.py  0004_order_branch.py  0005_order_phone_number.py  0006_alter_order_phone_number.py  0006_alter_order_status.py  0007_alter_order_city_alter_order_street.py
src/delivery/tests/: conftest.py  test_delivery.py
src/order/: admin.py  models.py  serializers.py  views.py
src/order/migrations/: 0001_initial.py  0002_alter_basket_id.py  0003_alter_basket_id.py  0004_basket_user_alter_basketitem_basket.py  0005_alter_basket_user.py  0006_order.py  0007_delete_order.py
src/order/tests/: conftest.py  test_order.py
src/payment/: liqpay_client.py  views.py
src/products/: admin.py  enums.py  models.py  serializers.py  views.py
src/products/migrations/: 0001_initial.py  0002_category_slug_alter_product_sizes.py  0002_remove_productcategory_description.py  0003_remove_category_slug_alter_product_sizes.py  0004_rename_colors_product_color.py  0005_rename_sizes_product_size.py  0006_alter_product_color_alter_product_size.py  0007_color_size_alter_product_category_and_more.py  0008_gender_remove_category_name_category_gender.py  (+16 more)
src/users/: admin.py  managers.py  models.py  permission.py  serializers.py  validators.py  views.py
(+10 files in other folders)
